# motor_manager

./: CMakeLists.txt  README.md
communications/ethercat/: CMakeLists.txt  README.md
communications/ethercat/include/ethercat/: ethercat_controller.hpp  ethercat_master.hpp
communications/ethercat/src/: ethercat_controller.cpp  ethercat_master.cpp
core/motor_interface/: CMakeLists.txt  README.md
core/motor_interface/include/motor_interface/: motor_controller.hpp  motor_driver.hpp  motor_master.hpp
hardware/minas/: CMakeLists.txt  README.md
hardware/minas/include/minas/: minas_driver.hpp
hardware/minas/src/: minas_driver.cpp
motor_manager/: CMakeLists.txt  README.md
motor_manager/include/motor_manager/: motor_manager.hpp
motor_manager/src/: motor_manager.cpp
